test/files/neg/t3275.check
t3275.scala:2: error: could not optimize @tailrec annotated method foo: it contains no recursive calls
  @annotation.tailrec def foo() = 5
                          ^
one error found
